Volumenes quitados, password harcodeada

--- a/chess/Dockerfile
+++ b/chess/Dockerfile
@@ -3,23 +3,22 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: erivero- <erivero-@student.42.fr>          +#+  +:+       +#+         #
+#    By: jariza-o <jariza-o@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/01/25 16:18:40 by jariza-o          #+#    #+#              #
-#    Updated: 2025/02/26 13:17:19 by erivero-         ###   ########.fr        #
+#    Updated: 2025/04/05 08:20:37 by jariza-o         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 FROM python:3.11-bookworm
 
-COPY service/requirements.txt /service/requirements.txt
+COPY service /service
 
 RUN pip install --no-cache-dir -r /service/requirements.txt
 
 RUN apt-get update && apt-get install -y postgresql postgresql-contrib redis-server sudo
 
 EXPOSE 5053
-# EXPOSE 6379
 
 COPY entrypoint.sh /entrypoint.sh
 COPY dropdb.sh /dropdb.sh
