--- a/social/Dockerfile
+++ b/social/Dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: erivero- <erivero-@student.42.fr>          +#+  +:+       +#+         #
+#    By: jariza-o <jariza-o@student.42malaga.com    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/08/29 16:03:17 by migarci2          #+#    #+#              #
-#    Updated: 2025/03/21 10:34:25 by erivero-         ###   ########.fr        #
+#    Updated: 2025/04/05 08:19:36 by jariza-o         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,6 @@ FROM python:3.11-bookworm
 RUN apt-get update && apt-get install -y postgresql postgresql-contrib sudo
 
 COPY service /service
-# COPY service/requirements.txt /service/requirements.txt
 
 RUN pip install --no-cache-dir -r /service/requirements.txt
 
